# brv-bench

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
assets/: locomo.json
assets/sample_data/: locomo.json
brv_bench/: __main__.py  types.py
brv_bench/adapters/: __init__.py  base.py  brv_cli.py  justifier.py
brv_bench/commands/: __init__.py  curate.py  evaluate.py
brv_bench/datasets/: __init__.py  locomo.py  longmemeval.py
brv_bench/metrics/: __init__.py  _normalize.py  base.py  diversity.py  exact_match.py  f1.py  latency.py  llm_judge.py  mrr.py  ndcg.py  precision.py  recall.py
brv_bench/metrics/_judge/: __init__.py  client.py  constants.py  prompts.py
brv_bench/reporting/: terminal.py
scripts/: run_bench.sh  source_env.sh  transform_locomo.py  transform_longmemeval.py
src/: main.py
src/utils/: common.py  file_utils.py  logger_utils.py  number_utils.py  time_utils.py
tests/: test_brv_cli_adapter.py  test_curate.py  test_dummy.py  test_evaluate.py  test_justifier.py  test_llm_judge.py  test_main.py  test_metrics.py  test_reporting.py  test_types.py
